Fix json file not found error when execute .jar build